# rag-dog-breeds

./: .gitignore  README.md  render.yaml
client/: .env.example  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
client/.next/dev/: prerender-manifest.json  trace
client/.next/dev/cache/: .rscinfo  chrome-devtools-workspace-uuid
client/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
client/.next/dev/server/app/: page.js  page_client-reference-manifest.js
client/.next/dev/static/chunks/: [root-of-the-server]__28bc9c2a._.css  [root-of-the-server]__28bc9c2a._.css.map  _6929dd06._.js  _6929dd06._.js.map  _be4e70ee._.js  _be4e70ee._.js.map  app_globals_css_bad6b30c._.single.css  app_globals_css_bad6b30c._.single.css.map  app_page_tsx_a8c03fea._.js  node_modules_8957c986._.js  node_modules_8957c986._.js.map  (+14 more)
client/components/: chat-app.tsx  text-chat.tsx  voice-chat.tsx  wave-visualization.tsx
client/hooks/: use-livekit.ts
client/lib/: api-client.ts  livekit-config.ts
docs/: README.md  api-reference.md  architecture.md  caching.md  configuration.md  deployment.md  design-decisions.md  development.md  evaluation.md  rag-pipeline.md
server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  fly.agent.toml  fly.api.toml  fly.ollama.toml  fly.toml  livekit.toml  pyproject.toml
server/evals/: README.md  golden.jsonl  run_eval.py
server/src/: __init__.py  config.py  database.py  embeddings.py  ingest.py  livekit_agent.py  livekit_server.py  main.py  models.py  pdf_processor.py  rag_service.py
(+78 files in other folders)
