[project]
name = "ollama-rag-dog-breeds"
version = "0.1.0"
description = "RAG service for dog breeds using Ollama and pgvector"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pypdf>=3.17.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "livekit>=0.11.0",
    "livekit-agents>=1.2.0",
    "livekit-plugins-silero>=0.3.0",
    "livekit-plugins-openai>=0.5.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "langchain<1.0",
    "langchain-community<0.4",
    "langchain-core<1.0",
    "langchain-ollama<1.0",
    "langchain-openai<1.0",
    "ragas>=0.4.3",
]

